<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/b"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/twos"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snap_edit"
        android:fontFamily="@font/light"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_marginLeft="20dp"
        android:elevation="@dimen/dp_5"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_edit_button"
        android:textSize="@dimen/sp_13"/>

</LinearLayout>