<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/dp_5"
        android:backgroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_gravity="center"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@mipmap/app_logo" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:background="@color/light_soft">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:background="@mipmap/surface">

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:gravity="center"
                    android:drawablePadding="@dimen/dp_5"
                    android:textSize="@dimen/sp_10"
                    android:fontFamily="@font/light"
                    app:drawableTopCompat="@mipmap/home" />
                <TextView
                    android:id="@+id/tvNotifications"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dp_5"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:gravity="center"
                    android:textSize="@dimen/sp_10"
                    android:fontFamily="@font/light"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@mipmap/bell" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="@dimen/sp_10"
                    android:fontFamily="@font/light"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:drawablePadding="@dimen/dp_5"
                    android:gravity="center"
                    app:drawableTopCompat="@mipmap/home" />
                <TextView
                    android:id="@+id/tvOrders"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/orders"
                    android:gravity="center"
                    android:textSize="@dimen/sp_10"
                    android:fontFamily="@font/light"
                    android:drawablePadding="@dimen/dp_5"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@mipmap/order" />
                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="@dimen/sp_10"
                    android:gravity="center"
                    android:drawablePadding="@dimen/dp_5"
                    android:fontFamily="@font/light"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@mipmap/profile" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/ivClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@mipmap/clicks"/>

    </FrameLayout>

</LinearLayout>